# hybrid-ffl-algorithms

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: avg_metrics.py  avg_metrics_batch.py  hist_plot.py  test_acc_plot.py  worst10_plot.py
analysis/table-metrics/: cifar10-cd.txt  cifar10-cs.txt  fashion-mnist.txt  fedavg-femnist.txt  femnist.txt  qfedavg-femnist.txt  shakespeare.txt
data/femnist/: README.md
data/femnist/preprocess/: data_to_json.py  get_file_dirs.py  get_hashes.py  group_by_writer.py  match_hashes.py
data/mnist/: README.md  generate_niid.py
data/shakespeare/: README.md  stats.sh
data/shakespeare/preprocess/: data_to_json.sh
data/utils/: preprocess.sh  sample.py  split_data.py  stats.py
experiments/: ditto-cifar.sh  ditto-fashion.sh  ditto-femnist.sh  ditto-text.sh  fedavg-cifar.sh  fedavg-fashion.sh  fedavg-femnist.sh  fedavg-text.sh  fedprox-cifar.sh  fedprox-fashion.sh  fedprox-femnist.sh  fedprox-text.sh  fedproxditto-cifar.sh  fedproxditto-fashion.sh  fedproxditto-femnist.sh  fedproxyogi-cifar.sh  fedproxyogi-fashion.sh  fedproxyogi-femnist.sh  fedproxyogi-text.sh  fedproxyogiditto-fashion.sh  fedproxyogiditto-femnist.sh  fedyogi-cifar.sh  fedyogi-fashion.sh  fedyogi-femnist.sh  fedyogi-text.sh  fedyogiditto-cifar.sh  fedyogiditto-fashion.sh  fedyogiditto-femnist.sh  fedyogiditto-text.sh  qfedavg-cifar.sh  qfedavg-fashion.sh  qfedavg-femnist.sh  qfedavg-text.sh
notebooks/: run-in-colab.ipynb
src/: client.py  client_app.py  server.py  server_app.py
src/models/: cnn.py  lstm.py  resnet.py
src/strategy/: adafed.py  fedavg.py  fedprox.py  fedyogi.py  qfedavg.py
src/utils/: dataset.py  language.py  task.py
