[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "wandb==0.22.2",
    "torchinfo>=1.8.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ericbanzuzi"

[tool.flwr.app.components]
serverapp = "src.server:app"
clientapp = "src.client:app"

[tool.flwr.app.config]
num-server-rounds = 500
fraction-fit = 0.03
local-epochs = 1
fraction-evaluate = 1
learning-rate = 0.1
agg-learning-rate = 0.1
batch-size = 32
dataset = "femnist"
agg-strategy = "fedavg"
cli-strategy = "fedavg"
proximal-mu = 0.1
model = "cnn"
yogi-server = 0
adam-server = 0
seed = 0
gamma = 1
lambda = 1
store-client-accs = 1
client-acc-file = "fedavg-femnist-accs"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 355  # number of clients

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 500  # number of clients
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU
