[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "wandb==0.22.2",
    "torchinfo>=1.8.0",
    "numpy<2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ericbanzuzi"

[tool.flwr.app.components]
serverapp = "src.server:app"
clientapp = "src.client:app"

[tool.flwr.app.config]
num-server-rounds = 100
fraction-fit = 0.1
local-epochs = 1
local-iterations = 1
fraction-evaluate = 1
learning-rate = 0.1
agg-learning-rate = 0.1
batch-size = 32
dataset = "femnist"
agg-strategy = "fedavg"
cli-strategy = "fedavg"
proximal-mu = 0.1
model = "cnn"
seed = 123
lambda = 1
group-norm = 1
store-client-accs = 1
client-acc-file = "fedavg-femnist-accs"
qparam = 0.1
dir-alpha = 0.5
use-shards = 0
num-malicious-clients = 0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 355  # number of clients

[tool.flwr.federations.gpu-simulation]
options.num-supernodes = 100  # number of clients
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.1 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.femnist-sim]
options.num-supernodes = 355  # number of clients

[tool.flwr.federations.cifar10-sim]
options.num-supernodes = 10  # number of clients
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.1 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.text-sim]
options.num-supernodes = 31  # number of clients
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.1 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.cifar10-sim2]
options.num-supernodes = 100  # number of clients
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.1 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.fashion-mnist-sim]
options.num-supernodes = 200  # number of clients